k8s/k8s/istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: juego2d-gateway
  namespace: devops-ep3
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 8080
        name: tcp                 
        protocol: TCP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: juego2d-vs
  namespace: devops-ep3
spec:
  hosts:
    - "*"
  gateways:
    - juego2d-gateway
  tcp:
    - match:
        - port: 8080
      route:
        - destination:
            host: juego2d-service
            port:
              number: 8080
